--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root {
+  --dark-color: #000;
+  --light-color: #f3f3f3;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -13,7 +18,7 @@ p {
 }
 
 body {
-  font-family: "Arvo", serif;
+  font-family: "Lato", sans-serif;
   line-height: 1.4;
 }
 
@@ -26,11 +31,11 @@ body {
 }
 
 .text-primary {
-  color: #000;
+  color: var(--dark-color);
 }
 
 .lg-heading {
-  font-size: 2.5rem;
+  font-size: 1.75rem;
 }
 
 .md-heading {
@@ -48,11 +53,19 @@ body {
 }
 
 .bg-light {
-  background: #f4f4f4;
+  background: #f3f3f3;
 }
 
 .bg-dark {
   background: #444;
+}
+
+.card {
+  background: #fff;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+  border-radius: 10px;
 }
 
 /* Navbar */
@@ -77,108 +90,117 @@ body {
 }
 
 #navbar a:hover {
-  background: #fafafa;
+  background: #f3f3f3;
   color: #000;
 }
 
 /* Showcase */
-#photo {
-  background: url("./images/cpu.jpg") no-repeat center center/cover;
+
+#showcase {
+  background: url("../images/cpu.jpg") no-repeat center center/cover;
   height: 100vh;
   color: #fff;
   text-align: center;
 }
 
-#photo .photo-content {
+#showcase .showcase-content {
   /* overlay */
   position: absolute;
-  top: 65px;
+  top: 62px;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: -62px;
   background: rgba(0, 0, 0, 0.3);
 }
-#photo .content-skills {
-  font-size: 0.75rem;
-  margin-top: 1.5rem;
-}
-#photo h1,
-#photo h3 {
+
+#showcase h1,
+#showcase h3 {
   padding-top: 1.25rem;
 }
 
-/* About */
-#showcase {
-  background: #fff;
+/* Work */
+
+#work {
+  background-color: #f3f3f3;
+  width: 100%;
+  text-align: center;
+  padding: 2.5rem 0;
 }
-.about {
+
+/* #work .projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+} */
+
+#work .projects {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1rem;
+}
+
+/* #home-articles .articles-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+} */
+
+#work .project {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+
+#work .project-image {
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid black;
+  transition: transform 0.2s;
+}
+#work .project-image:hover {
+  transform: scale(1.01);
+}
+
+#work .project-title {
+  font-size: 20px;
+  margin-bottom: 0.5em;
+}
+
+#work .project-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* About */
+#about {
+  background: #fff;
+  border-bottom: 1px solid #000;
+  border-top: 1px solid #000;
+}
+#about .about-content {
   display: flex;
   justify-content: flex-end;
 }
-.about .showcase-image {
+#about .about-content .about-image {
   flex: 1;
-
   display: flex;
   justify-content: center;
 }
 
-.about .showcase-image img {
+#about .about-content .about-image img {
   border-radius: 10px;
 }
 
-.about .showcase-text {
+#about .about-content .about-text {
   padding: 1rem;
   line-height: 1.6;
   flex: 1;
 }
 
-#showcase h3 {
+#about h3 {
   text-align: center;
   margin-bottom: 1.5rem;
-}
-
-/* Projects */
-
-#work {
-  background-color: #fafafa;
-  width: 100%;
-  text-align: center;
-  border-bottom: 1px solid #000;
-  border-top: 1px solid#000;
-  padding: 2.5rem 0;
-}
-
-#work .projects {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.project {
-  display: flex;
-  flex-direction: column;
-}
-
-.project-image {
-  width: 445.5px;
-  height: 240px;
-  border-radius: 10px;
-  border: 1px solid black;
-  transition: transform 0.2s;
-}
-.project-image:hover {
-  transform: scale(1.01);
-}
-
-.project-title {
-  font-size: 20px;
-  margin-bottom: 0.5em;
-}
-
-.project-heading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 /* icons + links */
@@ -215,7 +237,7 @@ body {
 /* Contact */
 #contact {
   text-align: center;
-  background: #fff;
+  background: #f3f3f3;
   font-size: 1rem;
   line-height: 1.8;
 }
@@ -242,7 +264,7 @@ body {
 }
 
 .portfolio-link {
-  text-decoration-line: none;
+  text-decoration: none;
   color: black;
 }
 
@@ -260,15 +282,4 @@ address {
 
 .footer-icons {
   margin: 1rem;
-}
-
-@media only screen and (max-width: 895px) {
-  .project-image {
-    max-width: 92%;
-    height: auto;
-  }
-
-  .code-icon {
-    height: auto;
-  }
 }
