--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ p {
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: 1.4;
 }
 
@@ -97,19 +97,10 @@ body {
 /* Showcase */
 
 #showcase {
-  background: url("../images/cpu.jpg") no-repeat center center/cover;
+  background: url('../images/cpu.jpg') no-repeat center center/cover;
   height: 100vh;
   color: #fff;
   text-align: center;
-}
-
-#showcase .showcase-content {
-  position: absolute;
-  top: 62px;
-  left: 0;
-  right: 0;
-  bottom: -62px;
-  background: rgba(0, 0, 0, 0.3);
 }
 
 #showcase h1,
@@ -126,23 +117,11 @@ body {
   padding: 2.5rem 0;
 }
 
-/* #work .projects {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-} */
-
 #work .projects {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
 }
-
-/* #home-articles .articles-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
-} */
 
 #work .project {
   display: flex;
