--- a/scss/main.scss
+++ b/scss/main.scss
@@ -268,6 +268,7 @@ body {
     outline: 0;
     border: 1px solid darkgray;
     border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
   }
 
   .contact-form input:focus,
