--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,6 @@
 a {
   text-decoration: none;
   color: $dark-color;
-  // transition: transform 0.2s;
 
   &:visited {
     color: $dark-color;
@@ -90,7 +89,7 @@ body {
   background: $dark-color;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   ul {
     list-style: none;
@@ -115,14 +114,27 @@ body {
 /* Showcase */
 
 #showcase {
-  background: url('../images/cpu.jpg') no-repeat center center/cover;
+  background: url('../images/funny.jpg') no-repeat center center/cover;
   height: 100vh;
   color: $white-color;
   text-align: center;
+  position: relative;
 
   h1,
   h3 {
     padding-top: 1.25rem;
+    z-index: 1;
+    position: relative;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
   }
 }
 
