new about picture

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -198,8 +198,9 @@ body {
 
       img {
         border-radius: 10px;
-        width: 300px;
-        height: auto;
+        border-radius: 50%;
+        width: 350px;
+        height: 350px;
       }
     }
 
