--- a/scss/main.scss
+++ b/scss/main.scss
@@ -188,8 +188,9 @@ body {
   border-top: 1px solid $dark-color;
 
   .about-content {
-    display: flex;
-    justify-content: flex-end;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
 
     .about-image {
       flex: 1;
@@ -205,7 +206,7 @@ body {
     }
 
     .about-text {
-      padding: 1rem;
+      // padding: 1rem;
       line-height: 1.7;
       flex: 1;
     }
