change font stack and nav spacing

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
 $dark-color: #000;
 $light-color: #e9e9e9;
 $white-color: #fff;
-$font-stack: 'Roboto', sans-serif;
+$font-stack: 'Libre Franklin', sans-serif;
