--- a/scss/main.scss
+++ b/scss/main.scss
@@ -98,8 +98,9 @@ body {
 
     li a {
       color: $white-color;
-      margin: 0 0.5rem;
+      margin: 0 0.75rem;
       padding: 0.25rem;
+      padding: 0.25rem 0.5rem;
       border-radius: 5px;
       display: block;
     }
