--- a/scss/main.scss
+++ b/scss/main.scss
@@ -145,7 +145,7 @@ body {
   background-color: $light-color;
   width: 100%;
   text-align: center;
-  padding: 2.5rem 0;
+  padding: 1.5rem 0;
 
   .projects {
     display: grid;
@@ -187,6 +187,7 @@ body {
   background: $white-color;
   border-bottom: 1px solid $dark-color;
   border-top: 1px solid $dark-color;
+  padding: 1.5rem 0;
 
   .about-content {
     display: grid;
@@ -225,9 +226,10 @@ body {
   font-size: 1rem;
   line-height: 1.8;
   border-top: 1px solid black;
+  padding: 1.5rem 0;
 
-  address {
-    font-style: normal;
+  p {
+    margin: 0px;
   }
 
   .phone-number {
