--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$dark-color: #000;
+$primary-color: #0468cd;
 $light-color: #e9e9e9;
 $white-color: #fff;
 $font-stack: 'Libre Franklin', sans-serif;
