--- a/scss/main.scss
+++ b/scss/main.scss
@@ -335,6 +335,7 @@ body {
 
   .btn {
     display: inline-block;
+    cursor: pointer;
     color: #fff;
     background: black;
     border-radius: 5px;
