--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -26,10 +26,6 @@
       margin-top: 10px;
     }
   }
-
-  // #about {
-  //   height: calc(100vh - 120px);
-  // }
 }
 
 /* Mobile Phones */
@@ -72,12 +68,27 @@
       .about-image {
         img {
           width: 300px;
+          width: 250px;
           height: 300px;
+          height: 250px;
         }
       }
 
       .about-text {
         text-align: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 300px) {
+  #about {
+    .about-content {
+      .about-image {
+        img {
+          width: 200px;
+          height: 200px;
+        }
       }
     }
   }
